--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>contact</title>
     <!-- google fonts  -->
     <!-- trajan fonts -->
     <link href="https://fonts.cdnfonts.com/css/trajan-pro" rel="stylesheet">
@@ -23,6 +23,8 @@
     <!-- custome css cdn  -->
     <link rel="stylesheet" href="./Assets/css/style.css">
 
+    <link rel="stylesheet" href="./Assets/css/response.css">
+
 </head>
 
 <body>
@@ -34,7 +36,7 @@
                         <div class="col-4 logo">
                             <a href="./index.html"><img src="./Assets/images/logo.png"></a>
                         </div>
-                        <div class="col-md-6 col-3">
+                        <div class="col-lg-6 col-2">
                             <nav class="navbar navbar-expand-lg">
                                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -122,7 +124,7 @@
         <div class="footer_section">
             <div class="container">
                 <div class="row  align-items-center">
-                    <div class="col-6">
+                    <div class="col-md-6 text_section">
                         <h2>contact us</h2>
                         <div class="info">
                             <h3>adress:</h3>
@@ -147,7 +149,7 @@
                         </div>
 
                     </div>
-                    <div class="col-6">
+                    <div class="col-md-6">
                         <img src="./Assets/images/map.png" alt="">
                     </div>
                     <div class="copy_right_section">
