--- a/service.html
+++ b/service.html
@@ -250,7 +250,7 @@
         <div class="footer_section">
             <div class="container">
                 <div class="row  align-items-center">
-                    <div class="col-6">
+                    <div class="col-md-6 text_section">
                         <h2>contact us</h2>
                         <div class="info">
                             <h3>adress:</h3>
@@ -275,7 +275,7 @@
                         </div>
 
                     </div>
-                    <div class="col-6">
+                    <div class="col-md-6">
                         <img src="./Assets/images/map.png" alt="">
                     </div>
                     <div class="copy_right_section">
