--- a/About.html
+++ b/About.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
         integrity="sha512-oHDEc8Xed4hiW6CxD7qjbnI+B07vDdX7hEPTvn9pSZO1bcRqHp8mj9pyr+8RVC2GmtEfI2Bi9Ke9Ass0as+zpg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- AOS  css link -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- fontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -19,15 +21,14 @@
 
     <!-- custome css cdn  -->
     <link rel="stylesheet" href="./Assets/css/style.css">
-
     <link rel="stylesheet" href="./Assets/css/response.css">
 
 </head>
 
 <body>
-    <!-- <div class="container"> -->
+    <div class="overflow-x-hidden">
         <div id="about">
-            <div class="header">
+            <div class="header" data-aos="fade-up" duration="2000">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container">
                         <a href="./index.html"><img src="./Assets/images/logo.png"></a>
@@ -59,7 +60,7 @@
                     </div>
                 </nav>
             </div>
-            <div class="content_wrap">
+            <div class="content_wrap" data-aos="zoom-in" duration="3000">
                 <div class="main">
                     <p>We Are Ace</p>
                 </div>
@@ -70,9 +71,9 @@
         </div>
         <div class="about">
             <div class="container">
-                <h2>About ACE</h2>
+                <h2 data-aos="zoom-in-down" duration="2000">About ACE</h2>
                 <div class="row about_section align-items-center justify-content-between">
-                    <div class="col-lg-6  text_box">
+                    <div class="col-lg-6  text_box" data-aos="zoom-in-right" duration="2000">
                         <p> Ace Media and Marketing is one of the experienced agency for communication, branding,
                             and
                             marketing services in Nepal. Print and digital media release services are proficiently
@@ -89,7 +90,7 @@
                             We present you ingenious advertising solutions that solve problems and enable brands to
                             share their ideas with the world with little or no effort.</p>
                     </div>
-                    <div class="col-lg-6 img_box">
+                    <div class="col-lg-6 img_box" data-aos="zoom-in-left" duration="2000">
                         <img src="./Assets/images/about-section.png" alt="">
                     </div>
                 </div>
@@ -97,10 +98,10 @@
         </div>
         <div class="banner">
             <div class="container">
-                <img src="./Assets/images/banner-img.png" alt="">
+                <img src="./Assets/images/banner-img.png" alt="" data-aos="zoom-in">
             </div>
         </div>
-        <div class="footer_section">
+        <div class="footer_section" data-aos="zoom-out">
             <div class="container">
                 <div class="row  align-items-center">
                     <div class="text_section col-md-6">
@@ -137,12 +138,23 @@
                 </div>
             </div>
         </div>
+    </div>
+    <!-- jQuery cdn  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
+        integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <!-- </div> -->
+    <!-- jQuery  -->
+    <script src="./Assets/jQuery/index.js"></script>
+
+    <!-- AOS JS  -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <!-- boostrap script cdn  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+
 </body>
 
 </html>
