--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
         integrity="sha512-oHDEc8Xed4hiW6CxD7qjbnI+B07vDdX7hEPTvn9pSZO1bcRqHp8mj9pyr+8RVC2GmtEfI2Bi9Ke9Ass0as+zpg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- AOS  css link -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- fontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -19,15 +21,14 @@
 
     <!-- custome css cdn  -->
     <link rel="stylesheet" href="./Assets/css/style.css">
-
     <link rel="stylesheet" href="./Assets/css/response.css">
 
 </head>
 
 <body>
-    <!-- <div class="container-overflo-x-hidden"> -->
+    <div class="overflo-x-hidden">
         <div id="contact">
-            <div class="header">
+            <div class="header" data-aos="fade-up" duration="2000">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container">
                         <a href="./index.html"><img src="./Assets/images/logo.png"></a>
@@ -59,7 +60,7 @@
                     </div>
                 </nav>
             </div>
-            <div class="content_wrap">
+            <div class="content_wrap" data-aos="zoom-in" duration="3000">
                 <div class="main">
                     <p>We Are Ace</p>
                 </div>
@@ -70,12 +71,12 @@
 
         </div>
         <div class="contact">
-            <div class="title">
+            <div class="title" data-aos="zoom-in-down" duration="2000">
                 <h2>get in touch</h2>
                 <p>Why not connect with us to see why we might just be the right fit for your business...</p>
             </div>
             <div class="details_wrap">
-                <div class="box">
+                <div class="box" data-aos="zoom-in" duration="2000">
                     <div class="icon">
                         <img src="./Assets/images/call.png" alt="">
                     </div>
@@ -86,7 +87,7 @@
 
                     </div>
                 </div>
-                <div class="box">
+                <div class="box" data-aos="zoom-in" duration="2000">
                     <div class="icon">
                         <img src="./Assets/images/email.png" alt="">
                     </div>
@@ -97,7 +98,7 @@
 
                     </div>
                 </div>
-                <div class="box">
+                <div class="box" data-aos="zoom-in" duration="2000">
                     <div class="icon">
                         <img src="./Assets/images/location.png" alt="">
                     </div>
@@ -109,10 +110,10 @@
                 </div>
             </div>
         </div>
-        <div class="map">
+        <div class="map" data-aos="flip-up">
             <img src="./Assets/images/contact-map.png" alt="">
         </div>
-        <div class="footer_section">
+        <div class="footer_section" data-aos="zoom-out">
             <div class="container">
                 <div class="row  align-items-center">
                     <div class="col-md-6 text_section">
@@ -149,7 +150,17 @@
                 </div>
             </div>
         </div>
-    <!-- </div> -->
+    </div>
+    <!-- jQuery cdn  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
+        integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- jQuery  -->
+    <script src="./Assets/jQuery/index.js"></script>
+
+    <!-- AOS JS  -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <!-- boostrap script cdn  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
