--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
         integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
         integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- AOS  css link -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- fontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -36,14 +38,13 @@
 
     <!-- custome css cdn  -->
     <link rel="stylesheet" href="./Assets/css/style.css">
-
     <link rel="stylesheet" href="./Assets/css/response.css">
 </head>
 
 <body>
     <div class="overflow-x-hidden">
         <div id="home">
-            <div class="header">
+            <div class="header" data-aos="fade-up" duration="2000">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container">
                         <a href="./index.html"><img src="./Assets/images/logo.png"></a>
@@ -75,7 +76,7 @@
                     </div>
                 </nav>
             </div>
-            <div class="content_wrap">
+            <div class="content_wrap" data-aos="zoom-in" duration="3000">
                 <div class="main">
                     <p>We Are Ace</p>
                 </div>
@@ -83,96 +84,97 @@
                     <p>Logically Integrated to Diversify</p>
                 </div>
             </div>
-            <div class="story_section">
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-lg-6">
-                            <h2>Stories <span>of Ace Media</span> </h2>
-                            <p>Ace Media & Marketing is a full-service marketing firm, that offers data-driven
-                                strategies
-                                and
-                                laser-focused creative services that produce a strong ROI.</p>
-                        </div>
-                        <div class="col-lg-6 img_box">
-                            <div class="img_section">
-                                <img src="./Assets/images/story.png" alt="">
-                                <div class="content_wrap">
-                                    <p>12+ <span>years</span></p>
-                                    <p>200+<span>clients</span></p>
-                                    <p>3000+<span>projects</span></p>
-                                </div>
+        </div>
+        <div class="story_section">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-6" data-aos="zoom-in-right" duration="2000">
+                        <h2>Stories <span>of Ace Media</span> </h2>
+                        <p>Ace Media & Marketing is a full-service marketing firm, that offers data-driven
+                            strategies
+                            and
+                            laser-focused creative services that produce a strong ROI.</p>
+                    </div>
+                    <div class="col-lg-6 img_box" data-aos="zoom-in-left" duration="2000">
+                        <div class="img_section">
+                            <img src="./Assets/images/story.png" alt="">
+                            <div class="content_wrap">
+                                <p>12+ <span>years</span></p>
+                                <p>200+<span>clients</span></p>
+                                <p>3000+<span>projects</span></p>
                             </div>
                         </div>
                     </div>
                 </div>
-
             </div>
-            <div class="service_section">
-                <div class="container">
-                    <h2>Our Services</h2>
-                    <div class="info_box_collection row d-flex justify-content-center">
-                        <div class="info_box">
-                            <h3>ATL</h3>
-                            <ul>
-                                <li>TVC</li>
-                                <li>print</li>
-                                <li>campaigns</li>
-                                <li>radio</li>
-                            </ul>
-                            <div class="img">
-                                <img src="./Assets/images/icon-1.png" alt="">
-                            </div>
+
+        </div>
+        <div class="service_section">
+            <div class="container">
+                <h2 data-aos="zoom-in-down" duration="2000">Our Services</h2>
+                <div class="info_box_collection row d-flex justify-content-center">
+                    <div class="info_box" data-aos="zoom-in" duration="2000">
+                        <h3>ATL</h3>
+                        <ul>
+                            <li>TVC</li>
+                            <li>print</li>
+                            <li>campaigns</li>
+                            <li>radio</li>
+                        </ul>
+                        <div class="img">
+                            <img src="./Assets/images/icon-1.png" alt="">
                         </div>
-                        <div class="info_box">
-                            <h3>OOH</h3>
-                            <ul>
-                                <li>in-shop Branding</li>
-                                <li>Outdoor Branding</li>
-                                <li>Events</li>
-                                <li>activation</li>
-                            </ul>
-                            <div class="img">
-                                <img src="./Assets/images/icon-2.png" alt="">
-                            </div>
+                    </div>
+                    <div class="info_box" data-aos="zoom-in" duration="2000">
+                        <h3>OOH</h3>
+                        <ul>
+                            <li>in-shop Branding</li>
+                            <li>Outdoor Branding</li>
+                            <li>Events</li>
+                            <li>activation</li>
+                        </ul>
+                        <div class="img">
+                            <img src="./Assets/images/icon-2.png" alt="">
                         </div>
-                        <div class="info_box">
-                            <h3>digital advertising</h3>
-                            <ul>
-                                <li>graphic & motion Ad</li>
-                                <li>content marketing</li>
-                                <li>social media marketing</li>
-                                <li>influence marketing</li>
-                            </ul>
-                            <div class="img">
-                                <img src="./Assets/images/icon-3.png" alt="">
-                            </div>
+                    </div>
+                    <div class="info_box" data-aos="zoom-in" duration="2000">
+                        <h3>digital advertising</h3>
+                        <ul>
+                            <li>graphic & motion Ad</li>
+                            <li>content marketing</li>
+                            <li>social media marketing</li>
+                            <li>influence marketing</li>
+                        </ul>
+                        <div class="img">
+                            <img src="./Assets/images/icon-3.png" alt="">
                         </div>
-                        <div class="info_box">
-                            <h3>Media buy</h3>
-                            <ul>
-                                <li>TV</li>
-                                <li>print</li>
-                                <li>radio</li>
-                                <li>cinema hall</li>
-                            </ul>
-                            <div class="img">
-                                <img src="./Assets/images/icon-4.png" alt="">
-                            </div>
+                    </div>
+                    <div class="info_box" data-aos="zoom-in" duration="2000">
+                        <h3>Media buy</h3>
+                        <ul>
+                            <li>TV</li>
+                            <li>print</li>
+                            <li>radio</li>
+                            <li>cinema hall</li>
+                        </ul>
+                        <div class="img">
+                            <img src="./Assets/images/icon-4.png" alt="">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="content_wrapper">
-            <img src="./Assets/images/row-bg.png">
+
+        <div class="content_wrapper" data-aos="fade-right" duration="2000">
+            <img src="./Assets/images/row-bg.png" class=" w-100">
             <div class="container">
                 <h2>Sky Rocket Your Brand <span>& Reach for the Stars!</span></h2>
             </div>
         </div>
         <div class="client_carousel_section justify-content-center">
-            <h2>Clients We’ve Worked With</h2>
-            
-            <div class="owl-carousel client-carousel container owl-theme">
+            <h2 data-aos="zoom-in-down" duration="2000">Clients We’ve Worked With</h2>
+
+            <div class="owl-carousel client-carousel container owl-theme" data-aos="fade-up" duration="4000">
                 <div class="item d-flex justify-content-center align-items-center"><img
                         src="./Assets/images/Group-1.png" alt=""></div>
                 <div class="item d-flex justify-content-center align-items-center"><img
@@ -187,9 +189,9 @@
 
         </div>
         <div class="Testimonials">
-            <h2>Testimonials</h2>
+            <h2 data-aos="zoom-in-down" duration="2000">Testimonials</h2>
             <div class="container ">
-                <div class="testimonials_wrapper owl-carousel owl-theme">
+                <div class="testimonials_wrapper owl-carousel owl-theme" data-aos="fade-up" duration="4000">
                     <div class="item">
                         <div class="item_wrap">
                             <div class="img justify-content-center">
@@ -230,7 +232,8 @@
                                 understands the client's business and needs of its consumers.
                             </div>
                         </div>
-                    </div><div class="item">
+                    </div>
+                    <div class="item">
                         <div class="item_wrap">
                             <div class="img">
                                 <img src="./Assets/images/Group-3.png" alt="">
@@ -240,7 +243,8 @@
                                 understands the client's business and needs of its consumers.
                             </div>
                         </div>
-                    </div><div class="item">
+                    </div>
+                    <div class="item">
                         <div class="item_wrap">
                             <div class="img">
                                 <img src="./Assets/images/Group-3.png" alt="">
@@ -256,10 +260,11 @@
         </div>
         <div class="team">
             <div class="container">
-                <h2>our team</h2>
-                <p>At Ace , it’s our people who make the company, and what we do, extraordinary.</p>
+                <h2 data-aos="zoom-in-down" duration="2000">our team</h2>
+                <p data-aos="zoom-in-down" duration="2000">At Ace , it’s our people who make the company, and what we
+                    do, extraordinary.</p>
                 <div class="team_members">
-                    <div class="member">
+                    <div class="member" data-aos="zoom-in" duration="2000">
                         <div class="img">
                             <img src="./Assets/images/member.png" alt="">
                         </div>
@@ -272,7 +277,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="member">
+                    <div class="member" data-aos="zoom-in" duration="2000">
                         <div class="img">
                             <img src="./Assets/images/member.png" alt="">
                         </div>
@@ -285,7 +290,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="member">
+                    <div class="member" data-aos="zoom-in" duration="2000">
                         <div class="img">
                             <img src="./Assets/images/member.png" alt="">
                         </div>
@@ -298,7 +303,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="member">
+                    <div class="member" data-aos="zoom-in" duration="2000">
                         <div class="img">
                             <img src="./Assets/images/member.png" alt="">
                         </div>
@@ -315,7 +320,7 @@
                 </div>
             </div>
         </div>
-        <div class="footer_section">
+        <div class="footer_section" data-aos="zoom-out">
             <div class="container">
                 <div class="row  align-items-center">
                     <div class="text_section col-md-6">
@@ -364,6 +369,9 @@
 
     <!-- jQuery  -->
     <script src="./Assets/jQuery/index.js"></script>
+
+    <!-- AOS JS  -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <!-- boostrap script cdn  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
