--- a/project.html
+++ b/project.html
@@ -14,12 +14,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
         integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
         integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <!-- AOS  css link -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- fontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -35,9 +35,9 @@
 </head>
 
 <body>
-    <!-- <div class="overflow-x-hidden"> -->
+    <div class="overflow-x-hidden">
         <div id="project">
-            <div class="header">
+            <div class="header" data-aos="fade-up" duration="2000">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container">
                         <a href="./index.html"><img src="./Assets/images/logo.png"></a>
@@ -69,7 +69,7 @@
                     </div>
                 </nav>
             </div>
-            <div class="content_wrap">
+            <div class="content_wrap" data-aos="zoom-in" duration="3000">
                 <div class="main">
                     <p>We Are Ace</p>
                 </div>
@@ -80,9 +80,9 @@
         </div>
         <div class="project">
             <div class="title">
-                <h2>Projects</h2>
+                <h2 data-aos="zoom-in-down" duration="2000">Projects</h2>
             </div>
-            <div class="televison">
+            <div class="televison" data-aos="fade-up" data-aos-duration="1000">
                 <h2>Television Commercial</h2>
                 <div class="container">
                     <div class="tv_wrapper owl-carousel owl-theme">
@@ -99,7 +99,7 @@
                     </div>
                 </div>
             </div>
-            <div class="campaign">
+            <div class="campaign" class="televison" data-aos="fade-up" data-aos-duration="1000">
                 <h2>Experiential Campaign</h2>
                 <div class="container">
                     <div class="campaign_wrapper owl-carousel owl-theme">
@@ -116,8 +116,8 @@
                     </div>
                 </div>
             </div>
-            <div class="slider_wrap">
-                <div class="digital_campaign">
+            <div class="slider_wrap" class="televison" >
+                <div class="digital_campaign" data-aos="fade-up" data-aos-duration="1000">
                     <h2>Digital Campaign</h2>
                     <div class="container">
                         <div class="img_wrapper owl-carousel owl-theme">
@@ -139,7 +139,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="marketing">
+                <div class="marketing" data-aos="fade-up" data-aos-duration="1000">
                     <h2>Exclusively Marketed by</h2>
                     <div class="container">
                         <div class="marketing_wrapper owl-carousel owl-theme">
@@ -162,7 +162,7 @@
                     </div>
                 </div>
             </div>
-            <div class="showcase">
+            <div class="showcase" class="televison" data-aos="fade-up" data-aos-duration="1000">
                 <h2>Creative Showcase</h2>
                 <div class="container">
                     <div class="showcase_wrapper owl-carousel owl-theme">
@@ -179,7 +179,7 @@
                     </div>
                 </div>
             </div>
-            <div class="brands">
+            <div class="brands" class="televison" data-aos="fade-up" data-aos-duration="1000">
                 <h2>GT & MT Branding</h2>
                 <div class="container">
                     <div class="brand_wrap owl-carousel owl-theme">
@@ -196,10 +196,8 @@
                     </div>
                 </div>
             </div>
-
         </div>
-
-        <div class="footer_section">
+        <div class="footer_section" class="televison" data-aos="zoom-out">
             <div class="container">
                 <div class="row  align-items-center">
                     <div class="col-md-6 text_section">
@@ -236,7 +234,7 @@
                 </div>
             </div>
         </div>
-    <!-- </div> -->
+    </div>
 
 
     </div>
@@ -250,6 +248,9 @@
 
     <!-- jQuery  -->
     <script src="./Assets/jQuery/index.js"></script>
+    <!-- AOS JS  -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
 
     <!-- boostrap script cdn  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
