--- a/service.html
+++ b/service.html
@@ -11,6 +11,8 @@
         integrity="sha512-oHDEc8Xed4hiW6CxD7qjbnI+B07vDdX7hEPTvn9pSZO1bcRqHp8mj9pyr+8RVC2GmtEfI2Bi9Ke9Ass0as+zpg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!-- AOS  css link -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- fontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -20,15 +22,14 @@
 
     <!-- custome css cdn  -->
     <link rel="stylesheet" href="./Assets/css/style.css">
-
     <link rel="stylesheet" href="./Assets/css/response.css">
 
 </head>
 
 <body>
-    <!-- <div class="container"> -->
+    <div class="overflow-x-hidden">
         <div id="service">
-            <div class="header">
+            <div class="header" data-aos="fade-up" duration="2000">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container">
                         <a href="./index.html"><img src="./Assets/images/logo.png"></a>
@@ -60,7 +61,7 @@
                     </div>
                 </nav>
             </div>
-            <div class="content_wrap">
+            <div class="content_wrap" data-aos="zoom-in" duration="3000">
                 <div class="main">
                     <p>We Are Ace</p>
                 </div>
@@ -69,11 +70,9 @@
                 </div>
             </div>
         </div>
-
         <div class="service">
-
-            <h2>services</h2>
-            <div class="row justify-content-between align-items-center">
+            <h2 data-aos="zoom-in-down" duration="2000">services</h2>
+            <div class="row justify-content-between align-items-center" data-aos="zoom-in-right">
                 <div class="col-lg-6 text_area">
                     <h3>Above the line</h3>
                     <p>Mass marketing techniques, which are primarily untargeted and aimed at establishing the
@@ -95,7 +94,7 @@
                 </div>
 
             </div>
-            <div class="row justify-content-between align-items-center">
+            <div class="row justify-content-between align-items-center" data-aos="zoom-in-left">
 
                 <div class="col-lg-6">
                     <img src="./Assets/images/about-2.png" alt="">
@@ -120,7 +119,7 @@
 
                 </div>
             </div>
-            <div class="row justify-content-between align-items-center">
+            <div class="row justify-content-between align-items-center" data-aos="zoom-in-right">
                 <div class="col-lg-6 text_area">
                     <h3>Digital Advertising</h3>
                     <p>Digital advertising is a type of marketing that businesses use to advertise their brands, goods,
@@ -145,7 +144,7 @@
                 </div>
 
             </div>
-            <div class="row justify-content-between align-items-center">
+            <div class="row justify-content-between align-items-center" data-aos="zoom-in-left">
 
                 <div class="col-lg-6">
                     <img src="./Assets/images/about-4.png" alt="">
@@ -175,10 +174,10 @@
                 </div>
             </div>
             <div class="screens_section">
-                <h2>led screens</h2>
+                <h2 data-aos="zoom-in-down" duration="2000">led screens</h2>
                 <div class="screens_wrapper">
 
-                    <div class="screen">
+                    <div class="screen" data-aos="zoom-out-down">
                         <div class="img">
                             <img src="./Assets/images/naxal-BBSM.png" alt="">
                         </div>
@@ -186,7 +185,7 @@
                             NAXAl BBSM
                         </div>
                     </div>
-                    <div class="screen">
+                    <div class="screen" data-aos="zoom-out-down">
                         <div class="img">
                             <img src="./Assets/images/naxal-BBSM-copunter.png" alt="">
                         </div>
@@ -194,7 +193,7 @@
                             Naxal BBSM Counter
                         </div>
                     </div>
-                    <div class="screen">
+                    <div class="screen" data-aos="zoom-out-down">
                         <div class="img">
                             <img src="./Assets/images/patan-BBSM.png" alt="">
                         </div>
@@ -202,7 +201,7 @@
                             Patan BBSM
                         </div>
                     </div>
-                    <div class="screen">
+                    <div class="screen" data-aos="zoom-out-down">
                         <div class="img">
                             <img src="./Assets/images/Maharajgunj-BBSM.png" alt="">
                         </div>
@@ -210,7 +209,7 @@
                             Maharajgunj BBSM
                         </div>
                     </div>
-                    <div class="screen">
+                    <div class="screen" data-aos="zoom-out-down">
                         <div class="img">
                             <img src="./Assets/images/Bouddha-BBSM.png" alt="">
                         </div>
@@ -218,7 +217,7 @@
                             Boudha BBSM
                         </div>
                     </div>
-                    <div class="screen">
+                    <div class="screen" data-aos="zoom-out-down">
                         <div class="img">
                             <img src="./Assets/images/Jadibuti-BBSM.png" alt="">
                         </div>
@@ -226,7 +225,7 @@
                             Jadibuti
                         </div>
                     </div>
-                    <div class="screen">
+                    <div class="screen" data-aos="zoom-out-down">
                         <div class="img">
                             <img src="./Assets/images/Putalisadak-BBSM.png" alt="">
                         </div>
@@ -236,10 +235,8 @@
                     </div>
                 </div>
             </div>
-
-
         </div>
-        <div class="footer_section">
+        <div class="footer_section" data-aos="zoom-out">
             <div class="container">
                 <div class="row  align-items-center">
                     <div class="col-md-6 text_section">
@@ -276,7 +273,16 @@
                 </div>
             </div>
         </div>
-    <!-- </div> -->
+    </div>
+    <!-- jQuery cdn  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
+        integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- jQuery  -->
+    <script src="./Assets/jQuery/index.js"></script>
+    <!-- AOS JS  -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <!-- boostrap script cdn  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
